welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:25: error: ')' expected but ';' found.
    setPos((diag%getMondeHauteur())+1,getMondeHauteur()-1;diag += 1)
                                                         ^Diagonal:25: error: ';' expected but ')' found.
    setPos((diag%getMondeHauteur())+1,getMondeHauteur()-1;diag += 1)
                                                                   ^